kubernetes/GCP_VM/yaml/ingress.yaml
# ingress 자원을 사용한 rule 생성
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-go-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /welcome/test
spec:
  rules:
    - http:
        paths:
          - pathType: Exact
            path: /welcome/test
            backend:
              service:
                name: http-go
                port: 
                  number: 80

# 서비스 구성
# kubectl create deployment http-go --image=gasbugs/http-go:ingress # 인그레스 테스트용 http-go
# kubectl expose deployment http-go --port=80 --target-port=8080
